--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <title>Intern Project</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <style>
-    #button
+    #start
     {
      
     }
@@ -12,9 +12,10 @@
 </head>
 <body>
 	
-    <form action="#" th:action="@{/submit}" method="post">
+    <form action="#" th:action="@{/startgame}" method="post">
     	
-        <input type="submit" id="button" value="Submit" /> 
+        
+        <input type="submit" value="Start Game" id="start" style="width: 150px; height:100px; font-size: 150%; margin-left: 40%;margin-top: 20%;" />
     </form>
 </body>
 </html>
